# YARK-MFD

./: CMakeLists.txt  README.md  YARK_CLIENT.sln
Lib/: about libs.txt
YARK_CLIENT/: .gitignore  AltiMeter.h  CMakeLists.txt  JoyStick.h  Log.cpp  Log.h  Main.cpp  Reg.h  TCPClient.cpp  TCPClient.h  YARK_CLIENT.APS  YARK_CLIENT.vcxproj  config.txt  resource.h  start.txt
YARK_CLIENT/Arduino/: Arduino.cpp  EnableArduino.h  Serial.cpp  Serial.h  Structs.h  Test.cpp
YARK_CLIENT/Client/: Client.cpp  Client.h  ExcampleClient.cpp  Structs.h  Struts.h
YARK_CLIENT/Engine/: Cam.cpp  Cam.h  Draw.cpp  Draw.h  Draw2DShader.cpp  Draw2DShader.h  Draw3DShader.cpp  Draw3DShader.h  Font.cpp  Font.h  PLEASE READ.txt  Shader.cpp  Shader.h  Sound.h  TextShader.cpp  TextShader.h  Texture.h  Window.cpp  Window.h
YARK_CLIENT/Shaders/: 2DSimple.frag  2DSimple.vert  3DSimple.frag  3DSimple.vert  3dSimple.vert  Text.frag  Text.vert  line.frag  line.vert  sphere.frag  sphere.vert  tilingMap.frag  tilingMap.vert
YARK_CLIENT/Widgets/: AirGuide.cpp  AirGuide.h  AirMap.cpp  AirMap.h  AirPlaneAutoPilot.cpp  AirPlaneAutoPilot.h  AtitudeIndicator.cpp  AtitudeIndicator.h  Console.cpp  Console.h  Container.cpp  Container.h  Control.cpp  Control.h  Dock.cpp  Dock.h  Fuel.cpp  Fuel.h  Grapher.cpp  Grapher.h  GroundTrack.cpp  GroundTrack.h  LaunchAss.cpp  LaunchAss.h  NavBall.cpp  NavBall.h  Orbit.cpp  Orbit.h  Settings.cpp  Settings.h  SoyuzNavBall.cpp  SoyuzNavBall.h  VInfo.cpp  VInfo.h  Widget.cpp  Widget.h
YARK_CLIENT/Widgets/Util/: BodyInfo.cpp  BodyInfo.h  Button.cpp  Button.h  IM.cpp  IM.h  OrbitCalc.cpp  OrbitCalc.h  TextureLoader.cpp  TextureLoader.h
YARK_CLIENT/Wrap/: Draw.cpp  Draw.h  Shader.cpp  Sound.cpp  Texture.cpp  Window.cpp  Window.h
YARK_CLIENT/lodepng/: lodepng.cpp  lodepng.h
